--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,6 +6,9 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
    <f:view>
-      <h:outputLabel value="Hello, world"/>
+      <h:form>
+         <h:commandButton value="List Region" action="listRegions"/>
+      </h:form>
+
    </f:view>
 </html>
