--- a/web/editRegion.xhtml
+++ b/web/editRegion.xhtml
@@ -5,11 +5,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <h:form>
-         <h:commandButton value="List Region" action="listRegions"/>
+<f:view>
+    <h:outputLabel value="Edit Region" for="name"/>
+    <h:form>
+        <h:outputLabel value="Region Name" for="name"/>
+        <h:inputText id="name" value="#{regionsBean.name}"/>
+        <h:commandButton value="Update" action="#{regionsBean.updateRegion}"/>
 
-      </h:form>
+    </h:form>
 
-   </f:view>
+</f:view>
 </html>
