--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,12 +4,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <h:form>
-         <h:commandButton value="List Region" action="listRegions"/>
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:b="http://bootsfaces.net/ui">
+<h:head>
 
-      </h:form>
+</h:head>
+<h:body>
+   <ui:composition template="defaultLayout.xhtml">
+      <ui:define name="content">
+         <b:container>
+            <b:row>
+               <div class="jumbotron">
+                  <h1>Hello, world!</h1>
+                  <p>...</p>
+                  <p><a class="btn btn-primary btn-lg" href="#">Learn more</a></p>
+               </div>
+               <b:column>
+                  <h1>Hello, world!</h1>
+               </b:column>
+            </b:row>
+            <h:outputLabel value="HR"/>
+            <h:form>
+               <h:commandButton value="List Region" action="listRegions"/>
+            </h:form>
+         </b:container>
+      </ui:define>
+   </ui:composition>
 
-   </f:view>
+</h:body>
 </html>
