--- a/web/listRegions.xhtml
+++ b/web/listRegions.xhtml
@@ -4,30 +4,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Regions List"/>
-    <h:dataTable value="#{regionsBean.regions}" var="region">
-        <h:column>
-            <f:facet name="header">Region Id</f:facet>
-            #{region.id}
-        </h:column>
-        <h:column>
-            <f:facet name="header">Region Name</f:facet>
-            #{region.name}
-        </h:column>
-        <h:column>
-            <f:facet name="header">Actions</f:facet>
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:b="http://bootsfaces.net/ui">
+<h:head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            type="application/javascript"/>
+</h:head>
+<h:body>
+
+    <b:container>
+        <b:row>
+            <h:outputLabel value="Regions List"/>
+            <b:dataTable value="#{regionsBean.regions}" var="region">
+                <b:dataTableColumn>
+                    <f:facet name="header">Region Id</f:facet>
+                    #{region.id}
+                </b:dataTableColumn>
+                <b:dataTableColumn>
+                    <f:facet name="header">Region Name</f:facet>
+                    #{region.name}
+                </b:dataTableColumn>
+                <b:dataTableColumn>
+                    <f:facet name="header">Actions</f:facet>
+                    <h:form>
+                        <h:commandButton value="Edit" action="#{regionsBean.editRegion(region)}"/>
+                        <h:commandButton value="Delete" action="#{regionsBean.deleteRegion(region)}"/>
+                    </h:form>
+                </b:dataTableColumn>
+            </b:dataTable>
             <h:form>
-                <h:commandButton value="Edit" action="#{regionsBean.editRegion(region)}"/>
-                <h:commandButton value="Delete" action="#{regionsBean.deleteRegion(region)}"/>
+                <h:commandButton value="New" action="#{regionsBean.newRegion}"/>
             </h:form>
-        </h:column>
-    </h:dataTable>
-    <h:form>
-        <h:commandButton value="New" action="#{regionsBean.newRegion}"/>
-    </h:form>
-
-
-</f:view>
+        </b:row>
+    </b:container>
+</h:body>
 </html>
